--- a/_posts/2016-04-01-Dribbble.markdown
+++ b/_posts/2016-04-01-Dribbble.markdown
@@ -5,4 +5,5 @@ date: 2016-04-01
 img: dribbble_owl.png
 alt: Dribbble with Owl enabled
 description: Dribbble with Owl enabled
+category: portfolio
 ---
