--- a/_posts/2016-04-02-Youtube.markdown
+++ b/_posts/2016-04-02-Youtube.markdown
@@ -5,4 +5,5 @@ date: 2016-04-02
 img: youtube_owl.png
 alt: YouTube with Owl enabled
 description: YouTube with Owl enabled
+category: portfolio
 ---
